# woxio

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
scripts/: search_bexio_invoice.py  sync_contact.py
src/woxio/: __init__.py  config.py  main.py  mapping.py  sync.py
src/woxio/bexio/: __init__.py  client.py  models.py
src/woxio/wodify/: __init__.py  client.py  models.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_bexio.py  test_wodify.py
tests/unit/: test_main.py  test_mapping.py  test_sync.py
